The fourth change

--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
                             Праздник в городе
                         </a>
                         <a id="headingThree" data-toggle="collapse" href="#collapseExample3" role="button" aria-expanded="false" aria-controls="collapseExample3">
-                            Стиль без границ
+                            Стиль <span class="hiding">без границ</span>
                         </a>
                         <a id="headingFour" data-toggle="collapse" href="#collapseExample4" role="button" aria-expanded="false" aria-controls="collapseExample4">
-                            Классика XXI века
+                            Классика <span class="hiding">XXI века</span>
                         </a>
                         <a id="headingFive" data-toggle="collapse" href="#collapseExample5" role="button" aria-expanded="false" aria-controls="collapseExample5">
                             Вечная классика
