The seventh change

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="header_upper">
                 <div class="header_upper_inner1" data-aos="fade-down-right">
                     <a href="#">Москва <i class="fas fa-angle-down"></i></a>
-                    <a href="#">8 800 333 57 75</a>
+                    <a class="tolka" href="#">8 800 333 57 75</a>
                 </div>  
     
                 <div class="header_upper_inner2" data-aos="fade-down-left">
